update lab 6